# ChangeLog for games-board/pio
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/pio/ChangeLog,v 1.7 2005/11/22 17:14:12 wolf31o2 Exp $

  22 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> pio-0.9.33.ebuild:
  Marked stable on amd64 and x86 wrt bug #109084.

  18 Oct 2005; Don Seiler <rizzo@gentoo.org> pio-0.9.19.ebuild:
  Removed broken debug building for bug #109084

*pio-0.9.33 (18 Oct 2005)

  18 Oct 2005; Don Seiler <rizzo@gentoo.org> +pio-0.9.33.ebuild:
  Version bump

*pio-0.9.23 (18 Aug 2005)

  18 Aug 2005; Don Seiler <rizzo@gentoo.org> +pio-0.9.23.ebuild:
  Version bump

*pio-0.9.19 (21 Jul 2005)

  21 Jul 2005; Don Seiler <rizzo@gentoo.org> +metadata.xml,
  +pio-0.9.19.ebuild:
  Initial addition.  This package is the re-incarnation of gnocatan.
