@@ -1,8 +1,10 @@
-MD5 426935ff78fc4272a4cdbdd1a2997b8b ChangeLog 837
+MD5 8cec89b8192bc45aa7342bc38ba1a01a ChangeLog 956
 MD5 a270a5b020f0b2c049fe47b0396bafd9 files/digest-pio-0.9.19 68
 MD5 bd0fefda62535dc61a6c2791b5b194f8 files/digest-pio-0.9.23 68
 MD5 1aa79202dcebe05379ba182e2f361d44 files/digest-pio-0.9.33 68
+MD5 1b814dcc402548c41406881d805130e9 files/digest-pio-0.9.40 68
 MD5 7035b4db1ed5ed0e55ee3dd6524e5b2b metadata.xml 321
 MD5 71a6059bd11e6bb1dc95370eb1cc128a pio-0.9.19.ebuild 1048
 MD5 4a2092784b8521003ff632cf3b614cae pio-0.9.23.ebuild 1127
 MD5 b4c874fb6338e72393001b19e4ca8d77 pio-0.9.33.ebuild 1124
+MD5 b0419c569f844b1bca4a5f6990b40902 pio-0.9.40.ebuild 898
